# docker-basic

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
scripts/: server-start.sh
universal/: asgi.py  urls.py  wsgi.py
universal/settings/: settings.py
